# bitboard

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  about.html  about_8dox.html  annotated.html  bit__const_8hpp.html  bit__intrinsics_8hpp.html  bit__operators_8hpp.html  bit__utils_8hpp.html  bitboard_8hpp.html  classbitboard_1_1BitBoard.html  classbitboard_1_1Position.html  classbitboard_1_1Turn.html  color_8hpp.html  dir_45b927a440a579d19c39c28120d1d800.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ab2b9d9a886a9e3fe84832725bffdf53.html  dir_ebb933375101509638c7c07813eb0276.html  dir_ef3b2545113449f8f25e623a543d64e3.html  fen__parser_8hpp.html  figure_8hpp.html  files.html  impl_2bitboard_8hpp.html  impl_2position_8hpp.html  index.html  modules.html  namespacebitboard.html  namespaces.html  pages.html  position_8hpp.html  searchdata-v2.js  turn_8hpp.html
.github/workflows/: ci.yml
cmake/: coverage.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/bitboard/: bitboard.hpp  color.hpp  figure.hpp  position.hpp  turn.hpp
include/bitboard/impl/: position.hpp
include/bitboard/utils/: bit_intrinsics.hpp  bit_utils.hpp  fen_parser.hpp
source/: bitboard.cpp  fen.cpp  figure.cpp  figures.cpp  magic.hpp  position.cpp  turn.cpp  zobrist.cpp
source/utils/: fen_parser.cpp
test/: CMakeLists.txt
test/source/: bitboard_test.cpp  position_test.cpp  turn_test.cpp
